[gd_scene load_steps=2 format=3 uid="uid://cvr6b1a0qvob3"]

[ext_resource type="Script" path="res://Scenes/Entities/Enemies/EtArea.gd" id="1_3rawf"]

[node name="EtArea" type="Area3D"]
script = ExtResource("1_3rawf")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
